# PHANTOM-Security-Toolkit

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/phantom/: core.h  modules.h  ui.h  utils.h
phantom-toolkit/phantom-toolkit/: Makefile  README.md
phantom-toolkit/phantom-toolkit/arp-monitor/: Makefile  phantom-arp
phantom-toolkit/phantom-toolkit/arp-monitor/include/: arp.h
phantom-toolkit/phantom-toolkit/arp-monitor/src/: arp_utils.c  main.c  monitor.c  spoof.c
phantom-toolkit/phantom-toolkit/bof-study/: Makefile  defended  exploit_demo  vuln
phantom-toolkit/phantom-toolkit/bof-study/src/: defended.c  exploit_demo.c  vuln.c
phantom-toolkit/phantom-toolkit/dns-resolver/: Makefile  phantom-dns
phantom-toolkit/phantom-toolkit/dns-resolver/include/: dns.h
phantom-toolkit/phantom-toolkit/dns-resolver/src/: cache.c  cli.c  main.c  packet.c  query.c  resolve.c
phantom-toolkit/phantom-toolkit/httpd/: Makefile  phantom-httpd
phantom-toolkit/phantom-toolkit/ids/: Makefile  phantom-ids
phantom-toolkit/phantom-toolkit/pe-elf-analyzer/: Makefile  phantom-analyzer
phantom-toolkit/phantom-toolkit/port-scanner/: Makefile  phantom-scan
phantom-toolkit/phantom-toolkit/sniffer/: Makefile  phantom-sniffer
src/: main.cpp
src/core/: logger.cpp  utils.cpp
src/modules/: crypto_tools.cpp  file_integrity.cpp  forensics.cpp  keylogger.cpp  network_scanner.cpp  packet_sniffer.cpp  password_tools.cpp  pe_analyzer.cpp  process_inspector.cpp  reverse_shell.cpp  steganography.cpp  vuln_scanner.cpp  wifi_scanner.cpp
src/ui/: gui_dashboard.cpp  menu.cpp
(+33 files in other folders)
